--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ In R, create model-based predictions of ambient air pollution concentrations at 
 #| message: true
 appc::predict_pm25(
   x = s2::as_s2_cell(c("8841b39a7c46e25f", "8841a45555555555")),
-  dates = list(as.Date(c("2023-05-18", "2023-11-06")), as.Date(c("2023-06-22", "2023-08-15")))
+  dates = list(as.Date(c("2024-05-18", "2024-06-10")), as.Date(c("2023-06-22", "2023-08-15")))
 )
 ```
 
@@ -71,7 +71,7 @@ Spatiotemporal geomarkers are used for predicting air pollution concentrations, 
 
 | geomarker | appc function |
 |-----------|---------------|
-| 🌦 weather & atmospheric conditions | `get_gridmet_data`, `get_narr_data()` |
+| 🌦 weather & atmospheric conditions | `get_gridmet_data()`, `get_narr_data()` |
 | 🛰 satellite-based aerosol diagnostics | `get_merra_data()` |
 | 🔥 wildfire smoke | `get_hms_smoke_data()` |
 | 🗻 elevation | `get_elevation_summary()` |
