--- a/README.Rmd
+++ b/README.Rmd
@@ -84,10 +84,16 @@ Spatiotemporal geomarkers are used for predicting air pollution concentrations, 
 | 🗻 elevation | `get_elevation_summary()` |
 | 🏙 land cover | `get_urban_imperv()` |
 
-Currently, `get_urban_imperviousness()`, `get_traffic()`, and `get_nei_point_summary()` are stashed in the `/inst` folder and are not integrated into this package.
+Currently, `get_traffic()`, and `get_nei_point_summary()` are stashed in the `/inst` folder and are not integrated into this package.
 
 ## Developing
 
 > Please note that the appc project is released with a [Contributor Code of Conduct](http://geomarker.io/appc/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
-To create and release geomarker data for release assets, as well as to create the AQS training data, train, and evaluate a generalized random forest model, install and use [`just`](https://just.systems/man/en/) to execute recipes in the `justfile`.
+To create and release the AQS training data, train, and evaluate a generalized random forest model, install and use [`just`](https://just.systems/man/en/) to execute recipes in the `justfile`.
+
+To update the MERRA-2 releases:  
+- Delete any exisiting MERRA-2 data and re-install it using code based on `inst/install_merra_from_source_on_cchmc_hpc.sh`
+- Create a "pre-release" (i.e., *not latest*) tagged and titled `merra-{release_date}` (e.g., `merra-2025-01-02`)
+- Update the default release tag used in `get_merra_data()`  (and `install_merra_data()`)
+
