end of 2024 update (#83)
- valid predictions now available until the end of 2024, although pre-compiled daily AQS data is only currently available through the end of October 2024
- added newer annual NLCD product, but not included in model
- MERRA-2 data releases no longer correspond to package versions, but instead use their own dedicated release and release tag

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/geomarker-io/appc/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/geomarker-io/appc/actions/workflows/R-CMD-check.yaml)
+[![r-universe](https://r-lib.r-universe.dev/badges/cpp11)](https://geomarker-io.r-universe.dev/appc)
 [![CRAN status](https://www.r-pkg.org/badges/version/appc)](https://CRAN.R-project.org/package=appc)
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable)
 <!-- badges: end -->
@@ -31,7 +32,13 @@ Source files included with the package train and evaluate models that can be upd
 
 ## Installing
 
-Install the development version of appc from GitHub with:
+Install the latest stable release of appc from R-universe with:
+
+```r
+install.packages("appc", repos = c("https://geomarker-io.r-universe.dev", "https://cloud.r-project.org"))
+```
+
+Install the latest, under-development version of appc from GitHub with:
 
 ```r
 # install.packages("remotes")
@@ -75,11 +82,18 @@ Spatiotemporal geomarkers are used for predicting air pollution concentrations, 
 | 🛰 satellite-based aerosol diagnostics | `get_merra_data()` |
 | 🔥 wildfire smoke | `get_hms_smoke_data()` |
 | 🗻 elevation | `get_elevation_summary()` |
+| 🏙 land cover | `get_urban_imperv()` |
 
-Currently, `get_urban_imperviousness()`, `get_traffic()`, and `get_nei_point_summary()` are stashed in the `/inst` folder and are not integrated into this package.
+Currently, `get_traffic()`, and `get_nei_point_summary()` are stashed in the `/inst` folder and are not integrated into this package.
 
 ## Developing
 
 > Please note that the appc project is released with a [Contributor Code of Conduct](http://geomarker.io/appc/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
 
-To create and release geomarker data for release assets, as well as to create the AQS training data, train, and evaluate a generalized random forest model, install and use [`just`](https://just.systems/man/en/) to execute recipes in the `justfile`.
+To create and release the AQS training data, train, and evaluate a generalized random forest model, install and use [`just`](https://just.systems/man/en/) to execute recipes in the `justfile`.
+
+To update the MERRA-2 releases:  
+- Delete any exisiting MERRA-2 data and re-install it using code based on `inst/install_merra_from_source_on_cchmc_hpc.sh`
+- Create a "pre-release" (i.e., *not latest*) tagged and titled `merra-{release_date}` (e.g., `merra-2025-01-02`)
+- Update the default release tag used in `get_merra_data()`  (and `install_merra_data()`)
+
