--- a/vignettes/articles/timeline-example.Rmd
+++ b/vignettes/articles/timeline-example.Rmd
@@ -37,40 +37,25 @@ d <-
 d
 ```
 
-For this example, we want to estimate the average fine particulate matter from 90 days prior to birth until the date of birth. We define these dates and create a list-col of dates for each location in our example data:
+For this example, we want to estimate the average fine particulate matter from 90 days prior to birth until the date of birth. Using the dob column as the start date, we will define an end date in our example data and also define the s2 cell identifers based on the latitude and longitude coordinates.
 
 ```{r}
 d <- d |>
-  mutate(
-    start_date = dob - 90,
-    end_date = dob
-  ) |>
-  rowwise() |>
-  mutate(dates = list(seq(start_date, end_date, by = 1))) |>
-  ungroup()
+	mutate(d, dob_plus_90 = dob + 90,
+	       s2 = s2::as_s2_cell(s2::s2_geog_point(lon, lat)))
 
-d
+head(d)
 ```
 
-Next, we will use the `lon` and `lat` columns to create the s2 geohash:
+Next, use the newly created columns to call the `predict_pm25_date_range()` function, which is a simpler implementation of predict_pm25 that takes vectors of start and end dates instead of lists of date vectors for each s2 cell location:
 
 ```{r}
-d <- d |> dplyr::mutate(s2 = s2::as_s2_cell(s2::s2_geog_point(lon, lat)))
-
-d
+dplyr::mutate(d, pm25 = predict_pm25_date_range(s2, dob, dob_plus_90))
 ```
 
-Directly use the `s2` and `dates` columns to call the `predict_pm25()` function:
+If interested in average exposures (and their uncertainties) from start date to end date (instead of daily exposures), we can extract those directly:
 
 ```{r}
-d <- d |> dplyr::mutate(pm25 = predict_pm25(s2, dates))
-
-d
-```
-
-With daily exposures, we could average fine particulate matter throughout the study period:
-
-```{r}
-d |>
-  mutate(mean_pm25 = purrr::map_dbl(pm25, \(.) mean(.$pm25)))
+d_pm25 <- with(d, predict_pm25_date_range(s2, dob, dob_plus_90, average = TRUE))
+bind_cols(d, bind_rows(d_pm25))
 ```
